# serializer version: 1
# name: test_device_registry[1299453]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'surepetcare',
        '1299453',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'SurePetCare',
    'model': 'DUAL_SCAN_CONNECT',
    'model_id': 6,
    'name': 'Katzenklappe',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_device_registry[269654]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'surepetcare',
        '269654',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'SurePetCare',
    'model': 'FEEDER_CONNECT',
    'model_id': 4,
    'name': 'Maui matlåda (old) ',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': <ANY>,
  })
# ---
# name: test_device_registry[295972]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'surepetcare',
        '295972',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'SurePetCare',
    'model': 'HUB',
    'model_id': 1,
    'name': 'Hem-hub',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_device_registry[472721]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'surepetcare',
        '472721',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'SurePetCare',
    'model': 'PET',
    'model_id': 0,
    'name': 'Maui',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
